# soparser

./: .gitignore  README.md  pyproject.toml
rtk/: __init__.py  jsonresume_schema.json  openai_parser.py  resume_dataclass.py  validation.py
soparser/: openai_parser.py  parser.py  resume_text.py  token_counter.py  validation.py
soparser/resume_json/: configuration.py  data_model.py  deserializer.py  renderer.py
tests/: test_openai_chat.py  test_openai_parser.py
