[project]
name = "soparser"
version = "0.1.0"
description = "Structured Output Parser"
authors = [
    { name = "The NLPist", email = "abobicesaevior@gmail.com" },
]
dependencies = [
    "nltk",
    "transformers",
    "sentencepiece"
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["soparser"]

[tool.pdm]
distribution = true
