[project]
name = "rtk"
version = "0.1.0"
description = "Structured Output Parser"
authors = [
    { name = "The NLPist", email = "abobicesaevior@gmail.com" },
]
dependencies = [
    "nltk",
    "transformers",
    "sentencepiece",
    "openai"
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rtk"]

[tool.pdm]
distribution = true
